src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__path_with_command_substitution__does_not_exist.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(r\"ls test.txt$(echo FOOBAR)\")?"
---
ls test.txt$(echo FOOBAR)

0   2   `ls`         CALLABLE `ls`
2   11  ` test.txt`  meta.function-call.arguments
11  12  `$`          punctuation.definition.variable
12  13  `(`          punctuation.section.parens.begin
13  17  `echo`       CALLABLE `echo`
17  24  ` FOOBAR`    meta.function-call.arguments
24  25  `)`          punctuation.section.parens.end
